force-app/main/default/objects/Membership__c/Membership__c.object-meta.xml
<CustomObject>
    <description>Object to hold memberships and related items (sponsorships, benefits, etc)</description>
    <label>Membership</label>
    <nameField>
        <label>Membership Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Memberships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>