force-app/main/default/objects/Membership__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Memberships (Child)</relationshipLabel>
    <relationshipName>Memberships2</relationshipName>
    <type>Lookup</type>
</CustomField>