force-app/main/default/objects/Membership__c/fields/Decline_Premiums__c.field-meta.xml
<CustomField>
    <fullName>Decline_Premiums__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decline Premiums</label>
    <type>Checkbox</type>
</CustomField>