force-app/main/default/objects/Membership__c/fields/Does_Not_Expire__c.field-meta.xml
<CustomField>
    <fullName>Does_Not_Expire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does Not Expire</label>
    <type>Checkbox</type>
</CustomField>