force-app/main/default/objects/Membership__c/fields/Gift_Certificate_Level_formula__c.field-meta.xml
<CustomField>
    <fullName>Gift_Certificate_Level_formula__c</fullName>
    <formula>TEXT(Product__r.Family) &amp; ' - One Year'</formula>
    <label>Gift Certificate Level (formula)</label>
    <type>Text</type>
</CustomField>