force-app/main/default/objects/Membership__c/fields/Membership_Lapse_Reason__c.field-meta.xml
<CustomField>
    <fullName>Membership_Lapse_Reason__c</fullName>
    <description>Field to hold the reason for why there was a lapse in membership by the individual.</description>
    <label>Membership Lapse Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>