force-app/main/default/objects/Membership__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to hold the Parent information if the membership is for a child</description>
    <label>Parent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Memberships (Parent)</relationshipLabel>
    <relationshipName>Memberships1</relationshipName>
    <type>Lookup</type>
</CustomField>