force-app/main/default/objects/Membership__c/fields/Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email__c</fullName>
    <description>Field to be populated through Flows. This field is used with the Membership Submission Form on form assembly to allow Form Assembly to query for active memberships associated with the person's email address. Will display error message on FA if attempt is made to purchase a membership when person already has active membership.</description>
    <label>Primary Contact Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>