force-app/main/default/objects/Membership__c/fields/Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Purchaser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to denote who purchased the membership record for a child</description>
    <label>Purchaser</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Memberships (Purchaser)</relationshipLabel>
    <relationshipName>Memberships3</relationshipName>
    <type>Lookup</type>
</CustomField>