force-app/main/default/objects/Membership__c/validationRules/End_Date_or_Does_Not_Expire.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_or_Does_Not_Expire</fullName>
    <active>true</active>
    <description>A membership must either have an End Date or have Does Not Expire selected.</description>
    <errorConditionFormula>NOT(Does_Not_Expire__c) &amp;&amp; ISBLANK( End_Date__c )</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Please populate the End Date or select Does Not Expire.</errorMessage>
</ValidationRule>